--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -60,7 +60,7 @@ Our experimental analysis addresses four questions:
 (4) How much does each of the implementation optimizations contribute to CORELS' performance?
 %
 All results presented were executed on a server with two Intel Xeon E5-2699~v4
-(55MB~cache, 2.20~GHz) processors and 448GB~RAM.
+(55~MB cache, 2.20~GHz) processors and 448~GB RAM.
 %
 Except where we mention a memory constraint, all experiments
 can run comfortably on smaller machines, \eg a laptop with 16GB~RAM.\begin{kdd}
